# mosaic

./: .gitignore  README.md  bench_solvers.py  compare_verifiers.py  diag_openrouter.py  diag_resolution.py  gen_config.json  gen_config_v3.json  install.sh  pyproject.toml  run_eval.py  run_few_shots_eval.py  run_validators.py
mosaic/: __init__.py  agents.py  cli.py  data.py  metrics.py  models.py  pipeline.py  prompts.py  reporting.py  schemas.py
mosaic/data/00000930/: thoughts
plots/: plot_model_accuracy.py
scripts/: bench_solvers.py  diag_one_solver.py  extract_iter_images.py  gen_config_v3.json  run_eval.py  run_few_shots_eval.py  run_validators.py
